all requirements met

--- a/aboutclass.html
+++ b/aboutclass.html
@@ -9,6 +9,8 @@
         ul {
             text-align: left;
             max-width: 600px;
+            margin-left: 25%;
+            margin-right: 25%;
         }  
     </style>
 </head>
@@ -16,7 +18,7 @@
 <body>
     <div class="header">
         <img src="logodark.png" alt="Taekwondo Tutoring Logo" width=10%>
-        <div class="tagline">Online Taekwondo Tutoring</div>
+        <div class="tagline">Taekwondo Tutoring</div>
         <a href = "mailto: taekwontutoryy@gmail.com">
             taekwontutoryy@gmail.com 
         </a>
