--- a/aboutinstructor.html
+++ b/aboutinstructor.html
@@ -5,17 +5,13 @@
 <head>
     <title>Taekwondo Tutoring: About the Instructor</title>
     <link rel="stylesheet" href="desktopStylesheet.css">
-    <style>
-        p {
-            padding: 20px;
-        }
-    </style>
+
 </head>
 
 <body>
     <div class="header">
         <img src="logodark.png" alt="Taekwondo Tutoring Logo" width=10%>
-        <div class="tagline">Online Taekwondo Tutoring</div>
+        <div class="tagline">Taekwondo Tutoring</div>
         <a href = "mailto: taekwontutoryy@gmail.com">
             taekwontutoryy@gmail.com 
         </a>
