--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
 <body>
     <div class="header">
         <img src="logodark.png" alt="Taekwondo Tutoring Logo" width=10%>
-        <div class="tagline">Online Taekwondo Tutoring</div>
+        <div class="tagline">Taekwondo Tutoring</div>
         <a href = "mailto: taekwontutoryy@gmail.com">
             taekwontutoryy@gmail.com 
         </a>
@@ -27,6 +27,7 @@
         <a class="active" href="./resources.html">Resources</a>
     </div>
 
+    <div class="bgimage"></div>
 
     <div class="banner">
         <h1>Resources</h1>
