--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <title>Taekwondo Tutoring: Online Taekwondo Classes</title>
         <link rel="stylesheet" href="desktopStylesheet.css">
         <meta charset="utf-8">
+
     </head>
 
     <body>
         <div class="header">
             <img src="logodark.png" alt="Taekwondo Tutoring Logo" width=10%>
-            <div class="tagline">Online Taekwondo Tutoring</div>
+            <div class="tagline">Taekwondo Tutoring</div>
             <a href = "mailto: taekwontutoryy@gmail.com">
                 taekwontutoryy@gmail.com 
             </a>
@@ -35,17 +36,17 @@
         <div class="banner">
             <h1>Taekwondo, At Your Pace.</h1>
         </div>
-        
+    
         <p>Taekwondo Tutoring is a new approach to teaching Taekwondo for
-             athletes young and old. Our mission is to support the Taekwondo
-             journey in all practitioners, whether it is to improve one’s 
-             skills and techniques, to reignite one’s passion and love for
-             Taekwondo, or to provide meaningful dialogue and advice about
-             one’s goals in the sport. Our reach and impact could not have
-             been achieved without our fully remote curriculum, where anyone
-             can practice and learn from the comfort of their own home.</p>
+            athletes young and old. Our mission is to support the Taekwondo
+            journey in all practitioners, whether it is to improve one’s 
+            skills and techniques, to reignite one’s passion and love for
+            Taekwondo, or to provide meaningful dialogue and advice about
+            one’s goals in the sport. Our reach and impact could not have
+            been achieved without our fully remote curriculum, where anyone
+            can practice and learn from the comfort of their own home.</p>
         <p>No matter the distance, we are here to help you thrive and succeed
-            in Taekwondo. Contact us today to learn more about our program and
-            how you can join Taekwondo Tutoring.</p>
+            in Taekwondo. Contact us today to learn more about our program
+            and how you can join Taekwondo Tutoring.</p>
     </body>
 </html>
