--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Taekwondo Tutoring: Online Taekwondo Classes</title>
         <link rel="stylesheet" href="desktopStylesheet.css">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
 
