--- a/aboutclass.html
+++ b/aboutclass.html
@@ -13,6 +13,8 @@
             margin-right: 25%;
         }  
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
