--- a/aboutinstructor.html
+++ b/aboutinstructor.html
@@ -5,6 +5,8 @@
 <head>
     <title>Taekwondo Tutoring: About the Instructor</title>
     <link rel="stylesheet" href="desktopStylesheet.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 </head>
 
