--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             <div class="phone">Phone: (781)698-7351</div>
         </div>
 
+        <!--<label for="menu-toggle" class="mobile-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>-->
+
+        <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
+        <label for="menu-toggle" class="menu-toggle-label">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </label>
         <div class="navigation">
             <a class="active" href="./index.html">Home</a>
             <div class="dropdown">
