--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,8 @@
 <head>
     <title>Taekwondo Tutoring: Resources</title>
     <link rel="stylesheet" href="desktopStylesheet.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
