--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,8 @@
                     margin-top: 0;
                 }
             }
-            
-           
         </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
