--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
+<!--
+Youngseo Yi
+9/27/23
+CS20-Web Programming
+HW2: Build a Business Website
+Content: Homepage for Business Website
+-->
+
 <!DOCTYPE html>
-
 <html>
-
-<!--Homepage for the website-->
     <head>
         <title>Taekwondo Tutoring: Online Taekwondo Classes</title>
         <link rel="stylesheet" href="desktopStylesheet.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
     </head>
 
     <body>
+        <!--header-->
         <div class="header">
             <img src="logodark.png" alt="Taekwondo Tutoring Logo" width=10%>
             <div class="tagline">Taekwondo Tutoring</div>
@@ -21,12 +26,7 @@
             <div class="phone">Phone: (781)698-7351</div>
         </div>
 
-        <!--<label for="menu-toggle" class="mobile-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>-->
-
+        <!--navigation bar-->
         <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
         <label for="menu-toggle" class="menu-toggle-label">
             <div class="bar"></div>
@@ -46,10 +46,12 @@
             <a href="./resources.html">Resources</a>
         </div>
 
+        <!--banner-->
         <div class="banner">
             <h1>Taekwondo, At Your Pace.</h1>
         </div>
-    
+        
+        <!--content-->
         <p>Taekwondo Tutoring is a new approach to teaching Taekwondo for
             athletes young and old. Our mission is to support the Taekwondo
             journey in all practitioners, whether it is to improve one’s 
