--- a/aboutclass.html
+++ b/aboutclass.html
@@ -34,7 +34,7 @@ Content: About the Class Page
         </div>
 
         <!--navigation bar-->
-        <div class="navigation">
+        <div class="navigation-desktop">
             <a href="./index.html">Home</a>
             <div class="dropdown active">
                 <div class="dropbtn">About</div>
@@ -44,6 +44,13 @@ Content: About the Class Page
                     <a href="./aboutinstructor.html">About the Instructor</a>
                 </div>
             </div>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./resources.html">Resources</a>
+        </div>
+        <div class="navigation-mobile">
+            <a href="./index.html">Home</a>
+            <a class="active" href="./aboutclass.html">About the Class</a>
+            <a href="./aboutinstructor.html">About the Instructor</a>
             <a href="./contact.html">Contact Us</a>
             <a href="./resources.html">Resources</a>
         </div>
