--- a/aboutinstructor.html
+++ b/aboutinstructor.html
@@ -25,7 +25,7 @@ Content: About the Instructor page (with the picture)
         </div>
 
         <!--navigation bar-->
-        <div class="navigation">
+        <div class="navigation-desktop">
             <a href="./index.html">Home</a>
             <div class="dropdown active">
                 <div class="dropbtn">About</div>
@@ -35,6 +35,15 @@ Content: About the Instructor page (with the picture)
                         Instructor</a>
                 </div>
             </div>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./resources.html">Resources</a>
+        </div>
+        <div class="navigation-mobile">
+            <a href="./index.html">Home</a>
+            <a href="./aboutclass.html">About the Class</a>
+            <a class="active" href="./aboutinstructor.html">
+                About the Instructor
+            </a>
             <a href="./contact.html">Contact Us</a>
             <a href="./resources.html">Resources</a>
         </div>
