--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ Content: Contact Us page (with the form)
         </div>
 
         <!--navigation bar-->
-        <div class="navigation">
+        <div class="navigation-desktop">
             <a href="./index.html">Home</a>
             <div class="dropdown">
                 <div class="dropbtn">About</div>
@@ -57,12 +57,19 @@ Content: Contact Us page (with the form)
             <a class="active" href="./contact.html">Contact Us</a>
             <a href="./resources.html">Resources</a>
         </div>
+        <div class="navigation-mobile">
+            <a href="./index.html">Home</a>
+            <a href="./aboutclass.html">About the Class</a>
+            <a href="./aboutinstructor.html">About the Instructor</a>
+            <a class="active" href="./contact.html">Contact Us</a>
+            <a href="./resources.html">Resources</a>
+        </div>
 
         <!--banner with page name-->
         <div class="banner">
             <h1>Contact Us</h1>
         </div>
-        
+
         <!--form-->
         <p>Please fill out the form below to contact us. </p>
         <div class="form">
