--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ Content: Homepage for Business Website
         </div>
 
         <!--navigation bar-->
-        <input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
+        <!--<input type="checkbox" id="menu-toggle" class="menu-toggle-checkbox">
         <label for="menu-toggle" class="menu-toggle-label">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-        </label>
-        <div class="navigation">
+        </label>-->
+        <div class="navigation-desktop">
             <a class="active" href="./index.html">Home</a>
             <div class="dropdown">
                 <div class="dropbtn">About</div>
@@ -45,12 +45,19 @@ Content: Homepage for Business Website
             <a href="./contact.html">Contact Us</a>
             <a href="./resources.html">Resources</a>
         </div>
+        <div class="navigation-mobile">
+            <a class="active" href="./index.html">Home</a>
+            <a href="./aboutclass.html">About the Class</a>
+            <a href="./aboutinstructor.html">About the Instructor</a>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./resources.html">Resources</a>
+        </div>
 
         <!--banner-->
         <div class="banner">
             <h1>Taekwondo, At Your Pace.</h1>
         </div>
-        
+
         <!--content-->
         <p>Taekwondo Tutoring is a new approach to teaching Taekwondo for
             athletes young and old. Our mission is to support the Taekwondo
