--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@ Content: Resources Page (with the table)
         </div>
 
         <!--navigation bar-->
-        <div class="navigation">
+        <div class="navigation-desktop">
             <a href="./index.html">Home</a>
             <div class="dropdown">
                 <div class="dropbtn">About</div>
@@ -34,6 +34,13 @@ Content: Resources Page (with the table)
                     <a href="./aboutinstructor.html">About the Instructor</a>
                 </div>
             </div>
+            <a href="./contact.html">Contact Us</a>
+            <a class="active" href="./resources.html">Resources</a>
+        </div>
+        <div class="navigation-mobile">
+            <a href="./index.html">Home</a>
+            <a href="./aboutclass.html">About the Class</a>
+            <a href="./aboutinstructor.html">About the Instructor</a>
             <a href="./contact.html">Contact Us</a>
             <a class="active" href="./resources.html">Resources</a>
         </div>
