--- a/aboutclass.html
+++ b/aboutclass.html
@@ -18,6 +18,13 @@ Content: About the Class Page
                 margin-left: 25%;
                 margin-right: 25%;
             }  
+            @media screen and (max-width: 600px) {
+                ul {
+                    width: 90%;
+                    padding: 0;
+                    margin:10%;
+                }    
+            }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
